--- a/index.html
+++ b/index.html
@@ -6,7 +6,123 @@
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+  <header>
+  	<nav>
+  		<ul>
+  			<li><a href="">Информация</a></li>
+  			<li><a href="">Фото и видео</a></li>
+  			<li><a href=""><img src="" width="138" height="70" alt="Логотип сайта"></a>
+  			<li><a href="">Карта штата</a></li>
+  			<li><a href="">Гостиницы</a></li>		
+  		</ul>
+  	</nav>
+  </header>
+
+  <main>
+  	<h1>Седона</h1>
+  	<p>Because the Grand Canyon sucks</p>
+  	<h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+  	<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+  	<section>
+  		<h2>Преимущества</h2>
+  		<ul>
+  			<li>
+  				<div>
+  					<h3>Настоящий городок</h3>
+  					<p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>	
+  				</div>
+  				<img src="" width="800" height="256" alt="Пейзаж_1">
+  			</li>
+  			<li>
+  				<h3>Допольнительные преимущества</h3>
+  				<ul>
+  					<li>
+  						<h4>Жильё</h4>
+  						<p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+  					</li>
+  					<li>
+  						<h4>Еда</h4>
+  						<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+  					</li>
+  					<li>
+  						<h4>Сувениры</h4>
+  						<p>Не только китайского, но и местного производства!</p>
+  					</li>
+  				</ul>
+  			</li>
+  			<li>
+  				<div>
+  					<h3>Там есть Мост дьявола</h3>
+  					<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+  				</div>
+  				<img src="" width="800" height="256" alt="Пейзаж_2">
+  			</li>
+  			<li>
+  				<h3>Небольшая площадь</h3>
+  				<p>Все достопримечательности находятся очень близко</p>
+  			</li>
+  			<li>
+  				<h3>Красивая дорога</h3>
+  				<p>Ехать в Седону из Лас-Весгаса совсем не скучно!</p>
+  			</li>
+  			<li>
+  				<h3>Мало туристов</h3>
+  				<p>Большинство едет в Гранд каньон и толпится там</p>
+  			</li>
+  		</ul>
+  	</section>
+  	<section>
+  		<h2>Заинтересовались?</h2>
+  		<p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+  		<button type="button">Поиск гостиницы в седоне</button>
+  	</section>
+  </main>
+
+  <footer>
+  	<section>
+  		<p>#visitSEDONA<br><a href="tel:+78005558628">+7 800 555-86-28</a></p>
+  	</section>
+  	<section>
+  		<ul>
+  			<li>
+  				<a href="">Twitter</a>
+  			</li>
+  			<li>
+  				<a href="">Facebook</a>
+  			</li>
+  			<li>
+  				<a href="">Instagram</a>
+  			</li>
+  		</ul>
+  	</section>
+  	<p>Website by HTML Academy</p>
+  </footer>
+
+  <section>
+  	<form action="https://echo.htmlacademy.ru" method="post">
+  		<p>
+  			<label for="arrival">Дата заезда</label>
+  			<input type="data" name="date-arrival" id="arrival" placeholder="24 апреля 2017">
+  		</p>
+  		<p>
+  			<label for="departure">Дата отъзда</label>
+  			<input type="data" name="date-departure" id="departure" placeholder="4 июля 2017">
+  		</p>
+  		<p>
+  			<label>Взорслые:</label>
+  			<button type="button">-</button>
+  			<input type="text" name="adult-number" value="2">
+  			<button type="button">+</button>
+  		</p>
+  		<p>
+  			<label>Дети:</label>
+  			<button type="button">-</button>
+  			<input type="text" name="children-number" value="0">
+  			<button type="button">+</button>
+  		</p>
+  			<button type="submit">Найти</button>
+  	</form>	
+  </section>
 
   </body>
 </html>
