--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
   		<ul>
   			<li><a href="">Информация</a></li>
   			<li><a href="">Фото и видео</a></li>
-  			<li><a href=""><img src="" width="138" height="70" alt="Логотип сайта"></a>
+  			<li><a href="index.html"><img src="" width="138" height="70" alt="Логотип сайта"></a>
   			<li><a href="">Карта штата</a></li>
-  			<li><a href="">Гостиницы</a></li>		
+  			<li><a href="catalog.html">Гостиницы</a></li>		
   		</ul>
   	</nav>
   </header>
 
   <main>
   	<h1>Седона</h1>
-  	<p>Because the Grand Canyon sucks</p>
+  	<img src="" width="456,65" height="213,03">
   	<h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
   	<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
   	<section>
