Корректирует значение атрибута для тега input

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
   	<form action="https://echo.htmlacademy.ru" method="post">
   		<p>
   			<label for="arrival">Дата заезда</label>
-  			<input type="data" name="date-arrival" id="arrival" placeholder="24 апреля 2017">
+  			<input type="text" name="date-arrival" id="arrival" placeholder="24 апреля 2017">
   		</p>
   		<p>
   			<label for="departure">Дата отъзда</label>
-  			<input type="data" name="date-departure" id="departure" placeholder="4 июля 2017">
+  			<input type="text" name="date-departure" id="departure" placeholder="4 июля 2017">
   		</p>
   		<p>
   			<label>Взорслые:</label>
