--- a/catalog.html
+++ b/catalog.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
-	<head>
-		<meta charset="utf-8">
-		<title>Каталог</title>
-	</head>
+  <head>
+	<meta charset="utf-8">
+	<title>Каталог</title>
+  </head>
 
 	<body>
 	  <header>
@@ -11,15 +11,15 @@
 	  		<ul>
 	  			<li><a href="">Информация</a></li>
 	  			<li><a href="">Фото и видео</a></li>
-	  			<li><a href="index.html"><img src="" width="138" height="70" alt="Логотип сайта"></a>
+	  			<li><a href="index.html"><img src="images/logo.svg" width="138" height="70" alt="Логотип сайта"></a>
 	  			<li><a href="">Карта штата</a></li>
 	  			<li><a href="">Гостиницы</a></li>		
 	  		</ul>
 	  	</nav>
 	  </header>	
 
-	  <main>
-	  	<h1>Жилье</h1>
+	<main>
+		<h1>Жилье</h1>
 	  	<section>
 	  		<h2>Фильтр жилья</h2>
 	  		<form action="https://echo.htmlacademy.ru" method="post">
@@ -75,7 +75,7 @@
 	  		<ul>
 	  			<li>
 	  				<h3>Amara Resort & Spa</h3>
-	  				<img src="" width="135" height="90" alt="Фото гостиницы">
+	  				<img src="images/catalog-photo.jpg" width="135" height="90" alt="Фото гостиницы">
 	  				<p>Гостиница</p>
 	  				<p>От 4000 &#8381;</p>
 	  				<button type="button">Подробнее</button>
@@ -84,7 +84,7 @@
 	  			</li>
 	  			<li>
 	  				<h3>Desert Quail Inn</h3>
-	  				<img src="" width="135" height="90" alt="Фото гостиницы">
+	  				<img src="images/catalog-photo_1.jpg" width="135" height="90" alt="Фото гостиницы">
 	  				<p>Мотель</p>
 	  				<p>От 3000 &#8381;</p>
 	  				<button type="button">Подробнее</button>
@@ -93,7 +93,7 @@
 	  			</li>
 	  			<li>
 	  				<h3>Villas at Poco Diablo</h3>
-	  				<img src="" width="135" height="90" alt="Фото гостиницы">
+	  				<img src="images/catalog-photo_2.jpg" width="135" height="90" alt="Фото гостиницы">
 	  				<p>Апартаменты</p>
 	  				<p>От 2000 &#8381;</p>
 	  				<button type="button">Подробнее</button>
@@ -102,27 +102,34 @@
 	  			</li>
 	  		</ul>
 	  	</section>
-	  </main>	
 
-	  <footer>
+	</main>	
+
+	<footer>
 	  	<section>
 	  		<p>#visitSEDONA<br><a href="tel:+78005558628">+7 800 555-86-28</a></p>
 	  	</section>
 	  	<section>
 	  		<ul>
 	  			<li>
-	  				<a href="">Twitter</a>
+	  				<div style="background: black; width: 46px; height: 48px">
+	  				<a href=""><img src="images/twitter.svg" width="17" height="17" alt="Twitter"></a>	
+	  				</div>
 	  			</li>
 	  			<li>
-	  				<a href="">Facebook</a>
+	  				<div style="background: black; width: 46px; height: 48px">
+	  				<a href=""><img src="images/fb-icon.svg" width="17" height="22" alt="Facebook"></a>	
+	  				</div>
 	  			</li>
 	  			<li>
-	  				<a href="">Instagram</a>
+	  				<div style="background: black; width: 46px; height: 48px">
+	  				<a href=""><img src="images/youtube.svg" width="20" height="16" alt="Youtube"></a>	
+	  				</div>
 	  			</li>
 	  		</ul>
 	  	</section>
 	  	<p>Website by HTML Academy</p>
-	  </footer>
-  
+	</footer>
+
 	</body>
 </html>
