--- a/index.html
+++ b/index.html
@@ -6,97 +6,110 @@
   </head>
   <body>
 
-  <header>
-  	<nav>
-  		<ul>
-  			<li><a href="">Информация</a></li>
-  			<li><a href="">Фото и видео</a></li>
-  			<li><a href="index.html"><img src="" width="138" height="70" alt="Логотип сайта"></a>
-  			<li><a href="">Карта штата</a></li>
-  			<li><a href="catalog.html">Гостиницы</a></li>		
-  		</ul>
-  	</nav>
-  </header>
+	  <header>
+	  	<nav>
+	  		<ul>
+	  			<li><a href="">Информация</a></li>
+	  			<li><a href="">Фото и видео</a></li>
+	  			<li><a href="index.html"><img src="images/logo.svg" width="138" height="70" alt="Логотип сайта"></a>
+	  			<li><a href="">Карта штата</a></li>
+	  			<li><a href="catalog.html">Гостиницы</a></li>		
+	  		</ul>
+	  	</nav>
+	  </header>
 
-  <main>
-  	<h1>Седона</h1>
-  	<img src="" width="456,65" height="213,03">
-  	<h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-  	<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-  	<section>
-  		<h2>Преимущества</h2>
-  		<ul>
-  			<li>
-  				<div>
-  					<h3>Настоящий городок</h3>
-  					<p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>	
-  				</div>
-  				<img src="" width="800" height="256" alt="Пейзаж_1">
-  			</li>
-  			<li>
-  				<h3>Допольнительные преимущества</h3>
-  				<ul>
-  					<li>
-  						<h4>Жильё</h4>
-  						<p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-  					</li>
-  					<li>
-  						<h4>Еда</h4>
-  						<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-  					</li>
-  					<li>
-  						<h4>Сувениры</h4>
-  						<p>Не только китайского, но и местного производства!</p>
-  					</li>
-  				</ul>
-  			</li>
-  			<li>
-  				<div>
-  					<h3>Там есть Мост дьявола</h3>
-  					<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-  				</div>
-  				<img src="" width="800" height="256" alt="Пейзаж_2">
-  			</li>
-  			<li>
-  				<h3>Небольшая площадь</h3>
-  				<p>Все достопримечательности находятся очень близко</p>
-  			</li>
-  			<li>
-  				<h3>Красивая дорога</h3>
-  				<p>Ехать в Седону из Лас-Весгаса совсем не скучно!</p>
-  			</li>
-  			<li>
-  				<h3>Мало туристов</h3>
-  				<p>Большинство едет в Гранд каньон и толпится там</p>
-  			</li>
-  		</ul>
-  	</section>
-  	<section>
-  		<h2>Заинтересовались?</h2>
-  		<p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-  		<button type="button">Поиск гостиницы в седоне</button>
-  	</section>
-  </main>
+	  <main>
+	  	<h1>Седона</h1>
+	  	<img src="" width="456,65" height="213,03">
+	  	<h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+	  	<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+	  	<section>
+	  		<h2>Преимущества</h2>
+	  		<ul>
+	  			<li>
+	  				<div>
+	  					<h3>Настоящий городок</h3>
+	  					<p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>	
+	  				</div>
+	  				<img src="" width="800" height="256" alt="Пейзаж_1">
+	  			</li>
+	  			<li>
+	  				<h3>Допольнительные преимущества</h3>
+	  				<ul>
+	  					<li>
+	  						<h4>Жильё</h4>
+	  						<p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+	  					</li>
+	  					<li>
+	  						<h4>Еда</h4>
+	  						<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+	  					</li>
+	  					<li>
+	  						<h4>Сувениры</h4>
+	  						<p>Не только китайского, но и местного производства!</p>
+	  					</li>
+	  				</ul>
+	  			</li>
+	  			<li>
+	  				<div>
+	  					<h3>Там есть Мост дьявола</h3>
+	  					<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+	  				</div>
+	  				<img src="" width="800" height="256" alt="Пейзаж_2">
+	  			</li>
+	  			<li>
+	  				<h3>Небольшая площадь</h3>
+	  				<p>Все достопримечательности находятся очень близко</p>
+	  			</li>
+	  			<li>
+	  				<h3>Красивая дорога</h3>
+	  				<p>Ехать в Седону из Лас-Весгаса совсем не скучно!</p>
+	  			</li>
+	  			<li>
+	  				<h3>Мало туристов</h3>
+	  				<p>Большинство едет в Гранд каньон и толпится там</p>
+	  			</li>
+	  		</ul>
+	  	</section>
+	  	<section>
+	  		<h2>Заинтересовались?</h2>
+	  		<p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+	  		<button type="button">Поиск гостиницы в седоне</button>
+	  	</section>
 
-  <footer>
-  	<section>
-  		<p>#visitSEDONA<br><a href="tel:+78005558628">+7 800 555-86-28</a></p>
-  	</section>
-  	<section>
-  		<ul>
-  			<li>
-  				<a href="">Twitter</a>
-  			</li>
-  			<li>
-  				<a href="">Facebook</a>
-  			</li>
-  			<li>
-  				<a href="">Instagram</a>
-  			</li>
-  		</ul>
-  	</section>
-  	<p>Website by HTML Academy</p>
-  </footer>
+		<article>
+		  	<a href="https://www.google.ru/maps/place/Седона,+Аризона+86336,+США/@34.9213479,-111.749289,10.75z/data=!4m5!3m4!1s0x872da132f942b00d:0x5548c523fa6c8efd!8m2!3d34.8697395!4d-111.7609896">
+		  		<img src="images/map.png" width="1199" height="594" alt="Карта">
+		  	</a>
+		</article>
+		
+	  </main>
+
+	  <footer>
+	  	<section>
+	  		<p>#visitSEDONA<br><a href="tel:+78005558628">+7 800 555-86-28</a></p>
+	  	</section>
+	  	<section>
+	  		<ul>
+	  			<li>
+	  				<div style="background: black; width: 46px; height: 48px">
+	  				<a href=""><img src="images/twitter.svg" width="17" height="17" alt="Twitter"></a>	
+	  				</div>
+	  			</li>
+	  			<li>
+	  				<div style="background: black; width: 46px; height: 48px">
+	  				<a href=""><img src="images/fb-icon.svg" width="17" height="22" alt="Facebook"></a>	
+	  				</div>
+	  			</li>
+	  			<li>
+	  				<div style="background: black; width: 46px; height: 48px">
+	  				<a href=""><img src="images/youtube.svg" width="20" height="16" alt="Youtube"></a>	
+	  				</div>
+	  			</li>
+	  		</ul>
+	  	</section>
+	  	<p>Website by HTML Academy</p>
+	  </footer>
 
   <section>
   	<form action="https://echo.htmlacademy.ru" method="post">
