--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,11 @@
   <head>
 	<meta charset="utf-8">
 	<title>Каталог</title>
+    <title>HTML Academy: Седона</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="favicon/icon.svg">
+    <link rel="apple-touch-icon" href="favicon/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
 
 	<body>
