--- a/catalog.html
+++ b/catalog.html
@@ -13,10 +13,10 @@
 	<body>
 	  <header>
 	  	<nav>
+	  		<a href="index.html"><img src="images/logo.svg" width="138" height="70" alt="Логотип сайта"></a>
 	  		<ul>
 	  			<li><a href="">Информация</a></li>
 	  			<li><a href="">Фото и видео</a></li>
-	  			<li><a href="index.html"><img src="images/logo.svg" width="138" height="70" alt="Логотип сайта"></a>
 	  			<li><a href="">Карта штата</a></li>
 	  			<li><a href="">Гостиницы</a></li>		
 	  		</ul>
@@ -24,7 +24,7 @@
 	  </header>	
 
 	<main>
-		<h1>Жилье</h1>
+		<h1>Поиск жилья</h1>
 	  	<section>
 	  		<h2>Фильтр жилья</h2>
 	  		<form action="https://echo.htmlacademy.ru" method="post">
@@ -71,38 +71,40 @@
 	  	<section>
 	  		<h2>Количество</h2>
 	  		<p>Сортировка:</p>
-	  		<button type="button">По цене</button>
-	  		<button type="button">По типу</button>
-	  		<button type="button">По рейтингу</button>
+	  		<a href="">По цене</a>
+	  		<a href="">По типу</a>
+	  		<a href="">По рейтингу</a>
+	  		<a href="">&#11015;</a>
+	  		<a href="">&#11014;</a>
 	  	</section>
 	  	<section>
 	  		<h2>Список гостиниц</h2>
 	  		<ul>
 	  			<li>
-	  				<h3>Amara Resort & Spa</h3>
+	  				<h3><a href="">Amara Resort & Spa</a></h3>
 	  				<img src="images/catalog-photo.jpg" width="135" height="90" alt="Фото гостиницы">
 	  				<p>Гостиница</p>
 	  				<p>От 4000 &#8381;</p>
-	  				<button type="button">Подробнее</button>
-	  				<button type="button">Забронировать</button>
+	  				<a href="">Подробнее</a>
+	  				<a href="">Забронировать</a>
 	  				<p>Рейтинг: 8.5</p>
 	  			</li>
 	  			<li>
-	  				<h3>Desert Quail Inn</h3>
+	  				<h3><a href="">Desert Quail Inn</a></h3>
 	  				<img src="images/catalog-photo_1.jpg" width="135" height="90" alt="Фото гостиницы">
 	  				<p>Мотель</p>
 	  				<p>От 3000 &#8381;</p>
-	  				<button type="button">Подробнее</button>
-	  				<button type="button">Забронировать</button>
+	  				<a href="">Подробнее</a>
+	  				<a href="">Забронировать</a>
 	  				<p>Рейтинг: 8.9</p>
 	  			</li>
 	  			<li>
-	  				<h3>Villas at Poco Diablo</h3>
+	  				<h3><a href="">Villas at Poco Diablo</a></h3>
 	  				<img src="images/catalog-photo_2.jpg" width="135" height="90" alt="Фото гостиницы">
 	  				<p>Апартаменты</p>
 	  				<p>От 2000 &#8381;</p>
-	  				<button type="button">Подробнее</button>
-	  				<button type="button">Забронировать</button>
+	  				<a href="">Подробнее</a>
+	  				<a href="">Забронировать</a>
 	  				<p>Рейтинг: 9.2</p>
 	  			</li>
 	  		</ul>
