--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 	  <header>
 	  	<nav>
+	  		<a href="index.html"><img src="images/logo.svg" width="138" height="70" alt="Логотип сайта"></a>
 	  		<ul>
 	  			<li><a href="">Информация</a></li>
 	  			<li><a href="">Фото и видео</a></li>
-	  			<li><a href="index.html"><img src="images/logo.svg" width="138" height="70" alt="Логотип сайта"></a>
 	  			<li><a href="">Карта штата</a></li>
 	  			<li><a href="catalog.html">Гостиницы</a></li>		
 	  		</ul>
