Оставляет только контентные изображения и корректирует alt

--- a/catalog.html
+++ b/catalog.html
@@ -81,7 +81,7 @@
 	  		<ul>
 	  			<li>
 	  				<h3><a href="">Amara Resort & Spa</a></h3>
-	  				<img src="images/catalog-photo.jpg" width="135" height="90" alt="Фото гостиницы">
+	  				<img src="images/catalog-photo.jpg" width="135" height="90" alt="Фото гостиницы Amara Resort & Spa">
 	  				<p>Гостиница</p>
 	  				<p>От 4000 &#8381;</p>
 	  				<a href="">Подробнее</a>
@@ -90,7 +90,7 @@
 	  			</li>
 	  			<li>
 	  				<h3><a href="">Desert Quail Inn</a></h3>
-	  				<img src="images/catalog-photo_1.jpg" width="135" height="90" alt="Фото гостиницы">
+	  				<img src="images/catalog-photo_1.jpg" width="135" height="90" alt="Фото мотеля Desert Quail Inn">
 	  				<p>Мотель</p>
 	  				<p>От 3000 &#8381;</p>
 	  				<a href="">Подробнее</a>
@@ -99,7 +99,7 @@
 	  			</li>
 	  			<li>
 	  				<h3><a href="">Villas at Poco Diablo</a></h3>
-	  				<img src="images/catalog-photo_2.jpg" width="135" height="90" alt="Фото гостиницы">
+	  				<img src="images/catalog-photo_2.jpg" width="135" height="90" alt="Фото апартаментов Villas at Poco Diablo">
 	  				<p>Апартаменты</p>
 	  				<p>От 2000 &#8381;</p>
 	  				<a href="">Подробнее</a>
@@ -118,18 +118,18 @@
 	  	<section>
 	  		<ul>
 	  			<li>
-	  				<div style="background: black; width: 46px; height: 48px">
-	  				<a href=""><img src="images/twitter.svg" width="17" height="17" alt="Twitter"></a>	
+	  				<div>
+	  				<a href="">Twitter</a>	
 	  				</div>
 	  			</li>
 	  			<li>
-	  				<div style="background: black; width: 46px; height: 48px">
-	  				<a href=""><img src="images/fb-icon.svg" width="17" height="22" alt="Facebook"></a>	
+	  				<div>
+	  				<a href="">Facebook</a>	
 	  				</div>
 	  			</li>
 	  			<li>
-	  				<div style="background: black; width: 46px; height: 48px">
-	  				<a href=""><img src="images/youtube.svg" width="20" height="16" alt="Youtube"></a>	
+	  				<div>
+	  				<a href="">Youtube</a>	
 	  				</div>
 	  			</li>
 	  		</ul>
