--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 		<article>
 		  	<a href="https://www.google.ru/maps/place/Седона,+Аризона+86336,+США/@34.9213479,-111.749289,10.75z/data=!4m5!3m4!1s0x872da132f942b00d:0x5548c523fa6c8efd!8m2!3d34.8697395!4d-111.7609896">
-		  		<img src="images/map.png" width="1199" height="594" alt="Карта">
+		  		<img src="images/map.png" width="1199" height="594" alt="Адрес города по адресу Седона, Аризона 86336, США">
 		  	</a>
 		</article>
 
@@ -96,18 +96,18 @@
 	  	<section>
 	  		<ul>
 	  			<li>
-	  				<div style="background: black; width: 46px; height: 48px">
-	  				<a href=""><img src="images/twitter.svg" width="17" height="17" alt="Twitter"></a>	
+	  				<div>
+	  				<a href="">Twitter</a>	
 	  				</div>
 	  			</li>
 	  			<li>
-	  				<div style="background: black; width: 46px; height: 48px">
-	  				<a href=""><img src="images/fb-icon.svg" width="17" height="22" alt="Facebook"></a>	
+	  				<div>
+	  				<a href="">Facebook</a>	
 	  				</div>
 	  			</li>
 	  			<li>
-	  				<div style="background: black; width: 46px; height: 48px">
-	  				<a href=""><img src="images/youtube.svg" width="20" height="16" alt="Youtube"></a>	
+	  				<div>
+	  				<a href="">Youtube</a>	
 	  				</div>
 	  			</li>
 	  		</ul>
