Добавляет классы тегам

--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
 	<meta charset="utf-8">
 	<title>Каталог</title>
@@ -9,11 +9,12 @@
     <link rel="manifest" href="manifest.webmanifest">
   </head>
 
-	<body>
-	  <header>
-	  	<nav>
-	  		<a href="index.html"><img src="images/logo.svg" width="138" height="70" alt="Логотип сайта"></a>
-	  		<ul>
+	<body class="page-body">
+
+	  <header class="main-header">
+	  	<nav class="main-navigation">
+	  		<a class="main-header-logo" href="index.html"><img src="images/logo.svg" width="138" height="70" alt="Логотип сайта"></a>
+	  		<ul class="site-navigation">
 	  			<li><a href="">Информация</a></li>
 	  			<li><a href="">Фото и видео</a></li>
 	  			<li><a href="">Карта штата</a></li>
@@ -22,23 +23,24 @@
 	  	</nav>
 	  </header>	
 
-	<main>
+	<main class="container">
 		<h1>Поиск жилья</h1>
+
 	  	<section>
 	  		<h2>Фильтр жилья</h2>
-	  		<form action="https://echo.htmlacademy.ru" method="post">
+	  		<form class="filter" action="https://echo.htmlacademy.ru" method="post">
 	  			<fieldset>
 	  				<legend>Инфаструктура</legend>
-	  				<ul>
-	  					<li>
+	  				<ul class="filter-infrastructure">
+	  					<li class="filter-infrastructure-item">
 	  						<label for="filter-swimming-pool">Бассейн</label>
 	  						<input type="checkbox" name="Swimming pool" id="filter-swimming-pool">
 	  					</li>
-	  					<li>
+	  					<li class="filter-infrastructure-item">
 	  						<label for="filter-parking">Парковка</label>
 	  						<input type="checkbox" name="Parking" id="filter-parking">
 	  					</li>
-	  					<li>
+	  					<li class="filter-infrastructure-item">
 	  						<label for="filter-wifi">WI-FI</label>
 	  						<input type="checkbox" name="WI-FI" id="filter-wifi">
 	  					</li>
@@ -46,40 +48,42 @@
 	  			</fieldset>
 	  			<fieldset>
 	  				<legend>Тип жилья</legend>
-	  				<ul>
-	  					<li>
+	  				<ul class="filter-habitation">
+	  					<li class="filter-habitation-item">
 	  						<label for="filter-hotel">Гостиница</label>
 	  						<input type="checkbox" name="Hotel" id="filter-hotel">
 	  					</li>
-	  					<li>
+	  					<li class="filter-habitation-item">
 	  						<label for="filter-motel">Мотель</label>
 	  						<input type="checkbox" name="Motel" id="filter-motel">
 	  					</li>
-	  					<li>
+	  					<li class="filter-habitation-item">
 	  						<label for="filter-apartments">Апартаменты</label>
 	  						<input type="checkbox" name="Apartments" id="filter-apartments">
 	  					</li>
 	  				</ul>
 	  			</fieldset>
 	  			<label for="value">Стоимость в сутки,&#8381;</label>
-	  			<input type="text" name="start-value" id="value">
-	  			<input type="text" name="final-value">	
-	  			<button type="submit">Показать</button>
+	  			<input class="value start-value" type="text" name="start-value" id="value">
+	  			<input class="value final-value" type="text" name="final-value">	
+	  			<button class="show" type="submit">Показать</button>
 	  		</form>
 	  	</section>
-	  	<section>
+
+	  	<section class="sorting">
 	  		<h2>Количество</h2>
 	  		<p>Сортировка:</p>
-	  		<a href="">По цене</a>
-	  		<a href="">По типу</a>
-	  		<a href="">По рейтингу</a>
-	  		<a href="">&#11015;</a>
-	  		<a href="">&#11014;</a>
+	  		<a class="sorting-link value-sorting" href="">По цене</a>
+	  		<a class="sorting-link type-sorting" href="">По типу</a>
+	  		<a class="sorting-link rating-sorting" href="">По рейтингу</a>
+	  		<a class="decInc-link decrease-sorting" href="">&#11015;</a>
+	  		<a class="decInc-link increase-sorting" href="">&#11014;</a>
 	  	</section>
-	  	<section>
+
+	  	<section class="hotel-list">
 	  		<h2>Список гостиниц</h2>
 	  		<ul>
-	  			<li>
+	  			<li class="hotel-list-item">
 	  				<h3><a href="">Amara Resort & Spa</a></h3>
 	  				<img src="images/catalog-photo.jpg" width="135" height="90" alt="Фото гостиницы Amara Resort & Spa">
 	  				<p>Гостиница</p>
@@ -88,7 +92,7 @@
 	  				<a href="">Забронировать</a>
 	  				<p>Рейтинг: 8.5</p>
 	  			</li>
-	  			<li>
+	  			<li class="hotel-list-item">
 	  				<h3><a href="">Desert Quail Inn</a></h3>
 	  				<img src="images/catalog-photo_1.jpg" width="135" height="90" alt="Фото мотеля Desert Quail Inn">
 	  				<p>Мотель</p>
@@ -97,7 +101,7 @@
 	  				<a href="">Забронировать</a>
 	  				<p>Рейтинг: 8.9</p>
 	  			</li>
-	  			<li>
+	  			<li class="hotel-list-item">
 	  				<h3><a href="">Villas at Poco Diablo</a></h3>
 	  				<img src="images/catalog-photo_2.jpg" width="135" height="90" alt="Фото апартаментов Villas at Poco Diablo">
 	  				<p>Апартаменты</p>
@@ -111,30 +115,37 @@
 
 	</main>	
 
-	<footer>
-	  	<section>
+	<footer class="main-footer">
+
+	  	<section class="info">
 	  		<p>#visitSEDONA<br><a href="tel:+78005558628">+7 800 555-86-28</a></p>
 	  	</section>
-	  	<section>
-	  		<ul>
+
+	  	<section class="footer-social">
+	  		<ul class="">
 	  			<li>
 	  				<div>
-	  				<a href="">Twitter</a>	
+	  					<a class="social-button" href="">Twitter</a>	
 	  				</div>
 	  			</li>
 	  			<li>
 	  				<div>
-	  				<a href="">Facebook</a>	
+	  					<a class="social-button" href="">Facebook</a>	
 	  				</div>
 	  			</li>
 	  			<li>
 	  				<div>
-	  				<a href="">Youtube</a>	
+	  					<a class="social-button" href="">Youtube</a>	
 	  				</div>
 	  			</li>
 	  		</ul>
 	  	</section>
-	  	<p>Website by HTML Academy</p>
+
+	  	<div class="footer-copyright">
+	  		<p>Website by</p>
+	  		<img src="images/logo_htmlacademy.png">	  		
+	  	</div>
+	  	
 	</footer>
 
 	</body>
