--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
@@ -8,12 +8,12 @@
     <link rel="apple-touch-icon" href="favicon/180.png">
     <link rel="manifest" href="manifest.webmanifest">
   </head>
-  <body>
+  <body class="page-body">
 
-	  <header>
-	  	<nav>
-	  		<a href="index.html"><img src="images/logo.svg" width="138" height="70" alt="Логотип сайта"></a>
-	  		<ul>
+	  <header class="main-header">
+	  	<nav class="main-navigation">
+	  		<a class="main-header-logo" href="index.html"><img src="images/logo.svg" width="138" height="70" alt="Логотип сайта"></a>
+	  		<ul class="site-navigation">
 	  			<li><a href="">Информация</a></li>
 	  			<li><a href="">Фото и видео</a></li>
 	  			<li><a href="">Карта штата</a></li>
@@ -22,66 +22,68 @@
 	  	</nav>
 	  </header>
 
-	  <main>
+	  <main class="container">
 	  	<h1>Седона</h1>
-	  	<img src="" width="456,65" height="213,03">
+	  	<img src="" width="456.65" height="350.88">
 	  	<h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
 	  	<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-	  	<section>
+
+	  	<section class="features">
 	  		<h2>Преимущества</h2>
-	  		<ul>
-	  			<li>
+	  		<ul class="features-list">
+	  			<li class="features-item">
 	  				<div>
 	  					<h3>Настоящий городок</h3>
 	  					<p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>	
 	  				</div>
 	  				<img src="" width="800" height="256" alt="Пейзаж_1">
 	  			</li>
-	  			<li>
+	  			<li class="features-item">
 	  				<h3>Допольнительные преимущества</h3>
-	  				<ul>
-	  					<li>
+	  				<ul class="features-list-extra">
+	  					<li class="features-item-extra">
 	  						<h4>Жильё</h4>
 	  						<p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
 	  					</li>
-	  					<li>
+	  					<li class="features-item-extra">
 	  						<h4>Еда</h4>
 	  						<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
 	  					</li>
-	  					<li>
+	  					<li class="features-item-extra">
 	  						<h4>Сувениры</h4>
 	  						<p>Не только китайского, но и местного производства!</p>
 	  					</li>
 	  				</ul>
 	  			</li>
-	  			<li>
+	  			<li class="features-item">
 	  				<div>
 	  					<h3>Там есть Мост дьявола</h3>
 	  					<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
 	  				</div>
 	  				<img src="" width="800" height="256" alt="Пейзаж_2">
 	  			</li>
-	  			<li>
+	  			<li class="features-item">
 	  				<h3>Небольшая площадь</h3>
 	  				<p>Все достопримечательности находятся очень близко</p>
 	  			</li>
-	  			<li>
+	  			<li class="features-item">
 	  				<h3>Красивая дорога</h3>
 	  				<p>Ехать в Седону из Лас-Весгаса совсем не скучно!</p>
 	  			</li>
-	  			<li>
+	  			<li class="features-item">
 	  				<h3>Мало туристов</h3>
 	  				<p>Большинство едет в Гранд каньон и толпится там</p>
-	  			</li>
+	  			</li class="features-item">
 	  		</ul>
 	  	</section>
-	  	<section>
+
+	  	<section class="searching-hotel">
 	  		<h2>Заинтересовались?</h2>
 	  		<p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-	  		<button type="button">Поиск гостиницы в седоне</button>
+	  		<button class="searching-hotel-button" type="button">Поиск гостиницы в седоне</button>
 	  	</section>
 
-		<article>
+		<article class="map">
 		  	<a href="https://www.google.ru/maps/place/Седона,+Аризона+86336,+США/@34.9213479,-111.749289,10.75z/data=!4m5!3m4!1s0x872da132f942b00d:0x5548c523fa6c8efd!8m2!3d34.8697395!4d-111.7609896">
 		  		<img src="images/map.png" width="1199" height="594" alt="Адрес города по адресу Седона, Аризона 86336, США">
 		  	</a>
@@ -89,55 +91,62 @@
 
 	  </main>
 
-	  <footer>
-	  	<section>
-	  		<p>#visitSEDONA<br><a href="tel:+78005558628">+7 800 555-86-28</a></p>
+	  <footer class="main-footer">
+
+	  	<section class="info">
+	  		<p>#visitSEDONA<br><a class="footer-phone" href="tel:+78005558628">+7 800 555-86-28</a></p>
 	  	</section>
-	  	<section>
+
+	  	<section class="footer-social">
 	  		<ul>
 	  			<li>
 	  				<div>
-	  				<a href="">Twitter</a>	
+	  					<a class="social-button" href="">Twitter</a>	
 	  				</div>
 	  			</li>
 	  			<li>
 	  				<div>
-	  				<a href="">Facebook</a>	
+	  					<a class="social-button" href="">Facebook</a>	
 	  				</div>
 	  			</li>
 	  			<li>
 	  				<div>
-	  				<a href="">Youtube</a>	
+	  					<a class="social-button" href="">Youtube</a>	
 	  				</div>
 	  			</li>
 	  		</ul>
 	  	</section>
-	  	<p>Website by HTML Academy</p>
+
+	  	<div class="footer-copyright">
+	  		<p>Website by</p>
+	  		<img src="images/logo_htmlacademy.png">	  		
+	  	</div>
+
 	  </footer>
 
-  <section>
-  	<form action="https://echo.htmlacademy.ru" method="post">
+  <section class="modal">
+  	<form class="searching-form" action="https://echo.htmlacademy.ru" method="post">
   		<p>
   			<label for="arrival">Дата заезда</label>
-  			<input type="text" name="date-arrival" id="arrival" placeholder="24 апреля 2017">
+  			<input class="modal-date-arrival" type="text" name="date-arrival" id="arrival" placeholder="24 апреля 2017">
   		</p>
   		<p>
   			<label for="departure">Дата отъзда</label>
-  			<input type="text" name="date-departure" id="departure" placeholder="4 июля 2017">
+  			<input class="modal-date-departure" type="text" name="date-departure" id="departure" placeholder="4 июля 2017">
   		</p>
   		<p>
   			<label>Взорслые:</label>
-  			<button type="button">-</button>
+  			<button class="amount-button amount-button-plus" type="button">-</button>
   			<input type="text" name="adult-number" value="2">
-  			<button type="button">+</button>
+  			<button class="amount-button amount-button-minus" type="button">+</button>
   		</p>
   		<p>
   			<label>Дети:</label>
-  			<button type="button">-</button>
+  			<button class="amount-button amount-button-plus" type="button">-</button>
   			<input type="text" name="children-number" value="0">
-  			<button type="button">+</button>
+  			<button class="amount-button amount-button-minus" type="button">+</button>
   		</p>
-  			<button type="submit">Найти</button>
+  			<button class="searching-modal-button" type="submit">Найти</button>
   	</form>	
   </section>
 
