--- a/catalog.html
+++ b/catalog.html
@@ -3,10 +3,14 @@
   <head>
 	<meta charset="utf-8">
 	<title>Каталог</title>
-    <link rel="icon" href="favicon.ico">
-    <link rel="icon" type="image/svg+xml" href="favicon/icon.svg">
-    <link rel="apple-touch-icon" href="favicon/180.png">
-    <link rel="manifest" href="manifest.webmanifest">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700 &display=swap" rel="stylesheet">
+		<link rel="icon" href="favicon.ico">
+		<link rel="icon" type="image/svg+xml" href="favicon/icon.svg">
+		<link rel="apple-touch-icon" href="favicon/180.png">
+		<link rel="manifest" href="manifest.webmanifest">
+		<link rel="stylesheet" href="normalize.css">
+		<link rel="stylesheet" href="CSS/style.css">
   </head>
 
 	<body class="page-body">
@@ -115,27 +119,27 @@
 
 	</main>	
 
-	<footer class="main-footer">
+	  <footer class="main-footer">
 
 	  	<section class="info">
-	  		<p>#visitSEDONA<br><a href="tel:+78005558628">+7 800 555-86-28</a></p>
+	  		<p>#visitSEDONA<br><a class="footer-phone" href="tel:+78005558628">+7 800 555-86-28</a></p>
 	  	</section>
 
 	  	<section class="footer-social">
-	  		<ul class="">
+	  		<ul class="footer-social-list">
 	  			<li>
-	  				<div>
-	  					<a class="social-button" href="">Twitter</a>	
+	  				<div class="social-button twitter">
+	  					<a href="">Twitter</a>	
 	  				</div>
 	  			</li>
 	  			<li>
-	  				<div>
-	  					<a class="social-button" href="">Facebook</a>	
+	  				<div class="social-button facebook">
+	  					<a href="">Facebook</a>	
 	  				</div>
 	  			</li>
 	  			<li>
-	  				<div>
-	  					<a class="social-button" href="">Youtube</a>	
+	  				<div class="social-button youtube">
+	  					<a href="">Youtube</a>	
 	  				</div>
 	  			</li>
 	  		</ul>
@@ -145,8 +149,8 @@
 	  		<p>Website by</p>
 	  		<img src="images/logo_htmlacademy.png">	  		
 	  	</div>
-	  	
-	</footer>
+
+	  </footer>
 
 	</body>
 </html>
