--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700 &display=swap" rel="stylesheet">
-    <link rel="icon" href="favicon.ico">
-    <link rel="icon" type="image/svg+xml" href="favicon/icon.svg">
-    <link rel="apple-touch-icon" href="favicon/180.png">
-    <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="CSS/style.css">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700 display=swap" rel="stylesheet">
+		<link rel="icon" href="favicon.ico">
+		<link rel="icon" type="image/svg+xml" href="favicon/icon.svg">
+		<link rel="apple-touch-icon" href="favicon/180.png">
+		<link rel="manifest" href="manifest.webmanifest">
+		<link rel="stylesheet" href="normalize.css">
+		<link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page-body">
 
