Добавляет стили для внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -88,31 +88,31 @@
 	  		<h2>Список гостиниц</h2>
 	  		<ul>
 	  			<li class="hotel-list-item">
-	  				<h3><a href="">Amara Resort & Spa</a></h3>
+	  				<h3 class="hotel-heading"><a href="">Amara Resort & Spa</a></h3>
 	  				<img src="images/catalog-photo.jpg" width="135" height="90" alt="Фото гостиницы Amara Resort & Spa">
 	  				<p>Гостиница</p>
 	  				<p>От 4000 &#8381;</p>
-	  				<a href="">Подробнее</a>
-	  				<a href="">Забронировать</a>
-	  				<p>Рейтинг: 8.5</p>
+	  				<a class="more-detailed" href="">Подробнее</a>
+	  				<a class="book" href="">Забронировать</a>
+	  				<p class="rating">Рейтинг: 8.5</p>
 	  			</li>
 	  			<li class="hotel-list-item">
-	  				<h3><a href="">Desert Quail Inn</a></h3>
+	  				<h3 class="hotel-heading"><a href="">Desert Quail Inn</a></h3>
 	  				<img src="images/catalog-photo_1.jpg" width="135" height="90" alt="Фото мотеля Desert Quail Inn">
 	  				<p>Мотель</p>
 	  				<p>От 3000 &#8381;</p>
-	  				<a href="">Подробнее</a>
-	  				<a href="">Забронировать</a>
-	  				<p>Рейтинг: 8.9</p>
+	  				<a class="more-detailed" href="">Подробнее</a>
+	  				<a class="book" href="">Забронировать</a>
+	  				<p class="rating">Рейтинг: 8.9</p>
 	  			</li>
 	  			<li class="hotel-list-item">
-	  				<h3><a href="">Villas at Poco Diablo</a></h3>
+	  				<h3 class="hotel-heading"><a href="">Villas at Poco Diablo</a></h3>
 	  				<img src="images/catalog-photo_2.jpg" width="135" height="90" alt="Фото апартаментов Villas at Poco Diablo">
 	  				<p>Апартаменты</p>
 	  				<p>От 2000 &#8381;</p>
-	  				<a href="">Подробнее</a>
-	  				<a href="">Забронировать</a>
-	  				<p>Рейтинг: 9.2</p>
+	  				<a class="more-detailed" href="">Подробнее</a>
+	  				<a class="book" href="">Забронировать</a>
+	  				<p class="rating">Рейтинг: 9.2</p>
 	  			</li>
 	  		</ul>
 	  	</section>
