--- a/index.html
+++ b/index.html
@@ -13,150 +13,175 @@
 		<link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page-body">
+  	<div class="wrapper">
 
-	  <header class="main-header">
-	  	<nav class="main-navigation">
-	  		<a class="main-header-logo" href="index.html"><img src="images/logo.svg" width="138" height="70" alt="Логотип сайта"></a>
-	  		<ul class="site-navigation">
-	  			<li><a href="">Информация</a></li>
-	  			<li><a href="">Фото и видео</a></li>
-	  			<li><a href="">Карта штата</a></li>
-	  			<li><a href="catalog.html">Гостиницы</a></li>		
-	  		</ul>
-	  	</nav>
-	  </header>
+		  <header class="main-header">
+		  	<nav class="main-navigation">
+		  		<a class="main-header-logo" href="index.html"><img src="images/logo.svg" width="138" height="70" alt="Логотип сайта"></a>
+		  		<ul class="site-navigation">
+		  			<li><a href="">Информация</a></li>
+		  			<li><a href="">Фото и видео</a></li>
+		  			<li><a href="">Карта штата</a></li>
+		  			<li><a href="catalog.html">Гостиницы</a></li>		
+		  		</ul>
+		  	</nav>
+		  </header>
 
-	  <main class="container">
-	  	<h1>Седона</h1>
-	  	<div class="welcome">
-	  		<img src="images/welcome.png" width="456.65" height="350.88">
-	  	</div>
-	  	<div class="text">
-	  		<h2>Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
-	  		<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-	  	</div>
+		  <main class="container">
+		  	<h1>Седона</h1>
+		  	<p class="welcome">
+		  		<img src="images/welcome.png" width="456.65" height="350.88">
+		  	</p>
+		  	<div class="text">
+		  		<h2>Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
+		  		<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+		  	</div>
 
-	  	<section class="features">
-	  		<h2>Преимущества</h2>
-	  		<ul class="features-list">
-	  			<li class="features-item">
-	  				<div class="features-itemImg">
-	  					<h3>Настоящий городок</h3>
-	  					<p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-	  					<img src="images/image.jpg" width="800" height="256" alt="Пейзаж_1">	
-	  				</div>
-	  			</li>
-	  			<li class="features-item">
-	  				<h3>Допольнительные преимущества</h3>
-	  				<ul class="features-list-extra">
-	  					<li class="features-item-extra">
-	  						<h3>Жильё</h3>
-	  						<p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-	  					</li>
-	  					<li class="features-item-extra">
-	  						<h3>Еда</h3>
-	  						<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-	  					</li>
-	  					<li class="features-item-extra">
-	  						<h3>Сувениры</h3>
-	  						<p>Не только китайского, но и местного производства!</p>
-	  					</li>
-	  				</ul>
-	  			</li>
-	  			<li class="features-item">
-	  				<div class="features-itemImg">
-	  					<h3>Там есть Мост дьявола</h3>
-	  					<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-	  					<img src="images/image_1.jpg" width="800" height="256" alt="Пейзаж_2">
-	  				</div>
-	  			</li>
-	  			<li class="features-item">
-	  				<h3>Небольшая площадь</h3>
-	  				<p>Все достопримечательности находятся очень близко</p>
-	  			</li>
-	  			<li class="features-item">
-	  				<h3>Красивая дорога</h3>
-	  				<p>Ехать в Седону из Лас-Весгаса совсем не скучно!</p>
-	  			</li>
-	  			<li class="features-item">
-	  				<h3>Мало туристов</h3>
-	  				<p>Большинство едет в Гранд каньон и толпится там</p>
-	  			</li class="features-item">
-	  		</ul>
-	  	</section>
+		  	<section class="features">
+		  		<h2>Преимущества</h2>
 
-	  	<section class="searching-hotel">
-	  		<h2>Заинтересовались?</h2>
-	  		<p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-	  		<button class="searching-hotel-button" type="button">Поиск гостиницы в седоне</button>
-	  	</section>
+		  		<ul class="features-list">
+		  			<li class="features-item">
+		  				<div class="features-text">
+			  				<h3>Настоящий<br> городок</h3>
+			  				<p class="number">-№1-</p>
+			  				<p>Седона — не аттракцион для туристов, там<br> течёт своя жизнь</p>
+			  			</div>
+		  			</li>
+		  			<li class="pov features-item">
+		  				<img class="pov" src="images/image.jpg" width="800" height="256" alt="Пейзаж_1">
+		  			</li>
+		  			<li class="features-item-extra">
+		  				<div class="extra-text home">
+		  					<img src="images/home.svg" width="75" height="72">
+			  				<h3>Жильё</h3>
+			  				<p>Рекомендуем пожить в настоящем<br> мотеле, всё как в кино!</p>
+		  				</div>
+		  			</li>
+		  			<li class="features-item-extra">
+		  				<div class="extra-text burger">
+		  					<img src="images/burger.svg" width="75" height="70">
+			  				<h3>Еда</h3>
+			  				<p>Всегда заказывайте фирменный бургер,<br> вы не разочаруетесь!</p>
+			  			</div>
+		  			</li>
+		  			<li class="features-item-extra">
+		  				<div class="extra-text">
+		  					<img src="images/present.svg" width="64" height="77">
+			  				<h3>Сувениры</h3>
+			  				<p>Не только китайского, но и местного<br> производства!</p>
+		  				</div>
+		  			</li>
+		  			<li class="pov1 features-item">
+		  				<img src="images/image_1.jpg" width="800" height="256" alt="Пейзаж_2">
+		  			</li>
+		  			<li class="features-item">
+		  				<div class="features-text">
+			  				<h3>Там есть<br> мост дьявола</h3>
+			  				<p class="number">-№2-</p>
+			  				<p>Да, по нему можно пройти! Если конечно<br> вы осмелитесь</p>
+			  			</div>
+		  			</li>
+		  			<li class="features-item">
+		  				<div class="secondary-text">	
+		  					<h3>Небольшая<br> площадь</h3>
+		  					<p class="number">-№3-</p>
+		  					<p>Все достопримечательности<br> находятся очень близко</p>
+		  				</div>
+		  			</li>
+		  			<li class="features-item">
+		  				<div class="secondary-text">
+		  					<h3>Красивая<br> дорога</h3>
+		  					<p class="number">-№4-</p>
+		  					<p>Ехать в Седону из Лас-Весгаса совсем<br> не скучно!</p>
+		  				</div>
+		  			</li>
+		  			<li class="features-item">
+		  				<div class="secondary-text">
+		  					<h3>Мало<br> туристов</h3>
+		  					<p class="number">-№5-</p>
+		  					<p>Большинство едет в Гранд каньон<br> и толпится там</p>
+		  				</div>
+		  			</li>		
+		  		</ul>
 
-		<article class="map">
-		  	<a href="https://www.google.ru/maps/place/Седона,+Аризона+86336,+США/@34.9213479,-111.749289,10.75z/data=!4m5!3m4!1s0x872da132f942b00d:0x5548c523fa6c8efd!8m2!3d34.8697395!4d-111.7609896">
-		  		<img src="images/map.png" width="1199" height="594" alt="Адрес города по адресу Седона, Аризона 86336, США">
-		  	</a>
-		</article>
+		  	</section>
 
-	  </main>
+		  	<section class="searching-hotel">
+		  		<div class="searching-hotel-main">
+			  		<h2>Заинтересовались?</h2>
+			  		<p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
+			  		<button class="searching-hotel-button" type="button">Поиск гостиницы в седоне</button>
+			  	</div>
+		  	</section>
 
-	  <footer class="main-footer">
+			<article class="map">
+			  	<a href="https://www.google.ru/maps/place/Седона,+Аризона+86336,+США/@34.9213479,-111.749289,10.75z/data=!4m5!3m4!1s0x872da132f942b00d:0x5548c523fa6c8efd!8m2!3d34.8697395!4d-111.7609896">
+			  		<img src="images/map.png" width="1199" height="594" alt="Адрес города по адресу Седона, Аризона 86336, США">
+			  	</a>
+			</article>
 
-	  	<section class="info">
-	  		<p>#visitSEDONA<br><a class="footer-phone" href="tel:+78005558628">+7 800 555-86-28</a></p>
-	  	</section>
+		  </main>
 
-	  	<section class="footer-social">
-	  		<ul class="footer-social-list">
-	  			<li>
-	  				<div class="social-button twitter">
-	  					<a href="">Twitter</a>	
-	  				</div>
-	  			</li>
-	  			<li>
-	  				<div class="social-button facebook">
-	  					<a href="">Facebook</a>	
-	  				</div>
-	  			</li>
-	  			<li>
-	  				<div class="social-button youtube">
-	  					<a href="">Youtube</a>	
-	  				</div>
-	  			</li>
-	  		</ul>
-	  	</section>
+		  <footer class="main-footer">
 
-	  	<div class="footer-copyright">
-	  		<p>Website by</p>
-	  		<img src="images/logo_htmlacademy.png">	  		
-	  	</div>
+		  	<section class="info">
+		  		<p>#visitSEDONA</p>
+		  		<p><a class="footer-phone" href="tel:+78005558628">+7 800 555-86-28</a></p>
+		  	</section>
 
-	  </footer>
+		  	<section class="footer-social">
+		  		<ul class="footer-social-list">
+		  			<li>
+		  				<div class="social-button twitter">
+		  					<a href="">Twitter</a>	
+		  				</div>
+		  			</li>
+		  			<li>
+		  				<div class="social-button facebook">
+		  					<a href="">Facebook</a>	
+		  				</div>
+		  			</li>
+		  			<li>
+		  				<div class="social-button youtube">
+		  					<a href="">Youtube</a>	
+		  				</div>
+		  			</li>
+		  		</ul>
+		  	</section>
 
-  <section class="modal">
-  	<form class="searching-form" action="https://echo.htmlacademy.ru" method="post">
-  		<p>
-  			<label for="arrival">Дата заезда</label>
-  			<input class="modal-date-arrival" type="text" name="date-arrival" id="arrival" placeholder="24 апреля 2017">
-  		</p>
-  		<p>
-  			<label for="departure">Дата отъзда</label>
-  			<input class="modal-date-departure" type="text" name="date-departure" id="departure" placeholder="4 июля 2017">
-  		</p>
-  		<p>
-  			<label>Взорслые:</label>
-  			<button class="amount-button amount-button-plus" type="button">-</button>
-  			<input type="text" name="adult-number" value="2">
-  			<button class="amount-button amount-button-minus" type="button">+</button>
-  		</p>
-  		<p>
-  			<label>Дети:</label>
-  			<button class="amount-button amount-button-plus" type="button">-</button>
-  			<input type="text" name="children-number" value="0">
-  			<button class="amount-button amount-button-minus" type="button">+</button>
-  		</p>
-  			<button class="searching-modal-button" type="submit">Найти</button>
-  	</form>	
-  </section>
+		  	<div class="footer-copyright">
+		  		<p>Website by</p>
+		  		<img src="images/logo_htmlacademy.png">	  		
+		  	</div>
 
+		  </footer>
+
+		  <section class="modal">
+		  	<form class="searching-form" action="https://echo.htmlacademy.ru" method="post">
+		  		<p>
+		  			<label for="arrival">Дата заезда</label>
+		  			<input class="modal-date-arrival" type="text" name="date-arrival" id="arrival" placeholder="24 апреля 2017">
+		  		</p>
+		  		<p>
+		  			<label for="departure">Дата отъзда</label>
+		  			<input class="modal-date-departure" type="text" name="date-departure" id="departure" placeholder="4 июля 2017">
+		  		</p>
+		  		<p>
+		  			<label>Взорслые:</label>
+		  			<button class="amount-button amount-button-plus" type="button">-</button>
+		  			<input type="text" name="adult-number" value="2">
+		  			<button class="amount-button amount-button-minus" type="button">+</button>
+		  		</p>
+		  		<p>
+		  			<label>Дети:</label>
+		  			<button class="amount-button amount-button-plus" type="button">-</button>
+		  			<input type="text" name="children-number" value="0">
+		  			<button class="amount-button amount-button-minus" type="button">+</button>
+		  		</p>
+		  			<button class="searching-modal-button" type="submit">Найти</button>
+		  	</form>	
+		  </section>
+		</div>
   </body>
 </html>
